Fix spacings

--- a/src/assets/styles/variables/_typography.scss
+++ b/src/assets/styles/variables/_typography.scss
@@ -6,7 +6,7 @@ $font-family: 'Montserrat', sans-serif;
 $font-family-heading: $font-family;
 
 $font-weight: 400;
-$font-size: 1.6rem;
+$font-size: 16px;
 $line-height: 1.75;
 $letter-spacing: -0.2px;
 
